--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ h1 { text-align: center; color: darkgreen; font-size: 50px ;}
 ul {
      color: black;  
      }
+h2 { color: darkblue;}
 
 .duz-cerceve{
 	border:3px solid rgb(138, 138, 228);
@@ -9,8 +10,7 @@ ul {
 	height:70px;
     background-color: wheat;
     margin-left: 0px;
-   align-items: baseline;
-   
+   align-items: baseline;  
 }
 
 
@@ -18,23 +18,26 @@ ul {
 img{
     width: 270px;
     border: 3px solid purple;
+    margin-right: 0%;
     float: right;
+    
 }
 
-.metin-cerceve1{
-   
-	border:3px solid rgb(138, 138, 228);
-	width: 990px;
-	height:90px;
-    background-color: wheat;
-}
+
+
+ .metin-cerceve1 {
+    border:3px solid rgb(138, 138, 228);
+        width: 990px;
+        height:90px;
+        background-color: wheat;
+ }
    
 
     .metin-cerceve2{
    
         border:3px solid rgb(138, 138, 228);
         width: 990px;
-        height:90px;
+        height:70px;
         background-color: wheat;
    
     }
@@ -43,7 +46,7 @@ img{
    
 	border:3px solid rgb(138, 138, 228);
 	width: 990px;
-	height:60px;
+	height:80px;
     background-color:wheat;
     
    
@@ -53,7 +56,7 @@ img{
    
 	border:3px solid rgb(138, 138, 228);
 	width: 990px;
-	height:240px;
+	height:235px;
     background-color: wheat;
     
    
@@ -118,33 +121,6 @@ body {
 }
 
 
-.vertical-menu {
-    width: 200px; 
-  }
-  
-  .vertical-menu a {
-    background-color: #eee; 
-    color: black; 
-    display: block;
-    padding: 12px; 
-    text-decoration: none; 
-  }
-  
-  .vertical-menu a:hover {
-    background-color: #ccc; 
-  }
-  
-  .vertical-menu a.active {
-    background-color:rgb(138, 138, 228); 
-    color: white;
-  }
-
-.kapsayici{
-    width: 90%;
-    height: 1000px;
-    margin-left: 5%;
-}
-  
   #comment-box, #post {
     border: none;
     border-radius: 5px;
@@ -171,3 +147,4 @@ body {
 #unordered{
    font-size: large;
 }
+
