--- a/style.css
+++ b/style.css
@@ -12,36 +12,30 @@ h2 { color: darkblue;}
     margin-left: 0px;
    align-items: baseline;  
 }
-
 .yazar{
-    border:3px solid rgb(138, 138, 228);
-        width: 990px;
-        height:90px;
-        background-color: wheat;
+    border: 3px solid rgb(138, 138, 228);
+         width: 990px;
+         height: 100px;
+         background-color: wheat;
  }
- 
- .yazar1{
-    border:3px solid rgb(138, 138, 228);
+.yazar2{
+   border: 3px solid rgb(138, 138, 228);
         width: 990px;
-        height:165px;
+        height: 140px;
         background-color: wheat;
+}
+.yazar3{
+    border: 3px solid rgb(138, 138, 228);
+         width: 990px;
+         height: 190px;
+         background-color: wheat;
  }
- 
- .yazar2{
-    border:3px solid rgb(138, 138, 228);
-        width: 990px;
-        height:180px;
-        background-color: wheat;
+ .yazar4{
+    border: 3px solid rgb(138, 138, 228);
+    width: 990px;
+    height: 70px;
+    background-color: wheat;
  }
-
- 
- .yazar3{
-    border:3px solid rgb(138, 138, 228);
-        width: 990px;
-        height:70px;
-        background-color: wheat;
- }
-
 img{
     width: 270px;
     border: 3px solid purple;
@@ -51,50 +45,72 @@ img{
    top: -200px;  
 }
 
-.resim{
-   
-    position: relative;
-    top:-110px;
-
+.kitaplar1{
+    border:3px solid rgb(138, 138, 228);
+        width: 390px;
+        height:480px;
+        background-color: wheat;
 }
-.resim2{
+.kitaplar2{
+    border:3px solid rgb(138, 138, 228);
+        width: 390px;
+        height:150px;
+        background-color: wheat;
+}
+
+.kitaplar3{
+    border:3px solid rgb(138, 138, 228);
+        width: 390px;
+        height:75px;
+        background-color: wheat;
+}
+
+.resim0{
     position: relative;
-    top: 25px;
-   right: -270px;
+    top: -200px;
+}
+.resim{
+    position: relative;
+    top: -100px;
+}
+
+.resimler{
+    position: relative;
+    top: 200px;
+    left: 250px;
+}
+.resimler2{
+    position: relative;
+    top: 280px;
+    left: 250px;
+    
+}
+
+.resimler3{
+    position: relative;
+    top: 280px;
+    right: -500px;
+}
+
+.resim1{
+    position: relative;
+    left: -10px;
+    top: -200px;
+}
+
+.resim2{
+    position:relative;
+    left: -20px;
+    top: -200px;
 }
 
 .resim3{
-    position: relative;
-    top:15px ;
+    position:relative;
+    left: -30px;
+    top: -200px;
 }
 
-.resim4{
-    position: relative;
-    top:-7px ;
-}
 
-.resim5{
-    position: relative;
-    top: 35px;
-}
-
-.resim6{
-    position: relative;
-    top: -30px;
-}
-
-.resim7{
- position: relative;
- right: -270px;
- bottom: -50px;
-
-}
-
-.resim8{
-    position: relative;
-    left: -10px;
-    bottom: -70px;
-}
 
  .metin-cerceve1 {
     border:3px solid rgb(138, 138, 228);
